# tp2taller

./: Armourer.cpp  Armourer.h  BenefitPoints.cpp  BenefitPoints.h  BlockingQueue.cpp  BlockingQueue.h  CMakeLists.txt  Carpenter.cpp  Carpenter.h  Coal.cpp  Coal.h  Cook.cpp  Cook.h  Farmer.cpp  Farmer.h  FileException.cpp  FileException.h  FileReader.cpp  FileReader.h  Gatherer.cpp  Gatherer.h  Inventory.cpp  Inventory.h  Iron.cpp  Iron.h  King.cpp  King.h  Lumberjack.cpp  Lumberjack.h  Miner.cpp  Miner.h  NonExistentFileException.cpp  NonExistentFileException.h  Producer.cpp  Producer.h  README.md  Resource.cpp  Resource.h  ResourceReader.cpp  ResourceReader.h  (+11 more)
tests/: CMakeLists.txt  tests.cpp
